--- a/morssey/src/Pages/Home/Home.scss
+++ b/morssey/src/Pages/Home/Home.scss
@@ -1,5 +1,5 @@
 
-*{
+* {
    white-space: break-spaces;
 }
 
@@ -86,6 +86,13 @@
    position: relative;
 }
 
+.border2 {
+   width: 100vw;
+   margin-top: -700px;
+   z-index: -1;
+   position: relative;
+}
+
 .home-page {
    
    position: relative;
@@ -106,6 +113,9 @@
       font-size: 3em;
       font-weight: 500;
       color: white;
+      font-size: 4em;
+      font-family: 'Fugaz One', cursive;
+      font-weight: 400;
       margin-bottom: 20px;
       width: calc(100vw - 100px);
    }
@@ -156,11 +166,11 @@
 
 
       &:hover {
-         background-color: #6d00b6;
+         background-color: rgba(255, 255, 255, 0.25);
       }
 
       &:active {
-         background-color: #8900e4;
+         background-color: rgba(255, 255, 255, 0.5);
          transition: 0s ease;
       }
 
@@ -182,6 +192,13 @@
    }
 
 
+   
 
+}
 
+.english-to-morse {
+   background-color: #0096ff;
+   margin-top: -10px;
+   margin-bottom: -100px;
+   padding-bottom: 100px;
 }
